--- a/_data/tools.yml
+++ b/_data/tools.yml
@@ -12,7 +12,11 @@
   name: "Data Overviews for soy genomic data"
   url: "https://dscensor.legumeinfo.org/multiqc-demo/genome_main:glycine"
 - category: "Visualize / Browse"
-  description: "Genome browsers for soybean and related species. (Also accessible from the GENOMICS tab)"
+  description: "Composite Genetic map for Glycine max."
+  name: "SoyBase composite genetic map"
+  url: "/maps"
+- category: "Visualize / Browse"
+  description: "Genome browsers for soybean and related species. (Also accessible from the GENOMICS tab)."
   name: "Genome browsers"
   url: "/tools/browsers"
 - category: "Visualize / Browse"
