--- a/_data/about.yml
+++ b/_data/about.yml
@@ -16,7 +16,7 @@
   name: "Gene nomenclature"
   url: "/about/gene_nomenclature"
 - category: "Nomenclature"
-  description: "Naming and correspondence"
+  description: "Gene model naming and correspondence"
   name: "Linkage groups and chromosomes"
   url: "/about/lgs_and_chromosomes"
 - category: "Nomenclature"
