--- a/_data/tools.yml
+++ b/_data/tools.yml
@@ -55,6 +55,10 @@
   description: "Search for genes"
   name: "Gene Search Tool"
   url: "/tools/search/gene.html"
+- category: "Visualize / Browse"
+  description: "Ontology"
+  name: "Ontology"
+  url: "/tools/ontology"
 #   category: "FIXME"
 #   description: Description
 #   name: Maps
