--- a/_config.yml
+++ b/_config.yml
@@ -52,7 +52,7 @@ liquid:
   error_mode: strict
   strict_filters: true
   # note incompatibility with "default" filter: https://github.com/Shopify/liquid/issues/1404
-  strict_variables: false
+  strict_variables: true
 
 # Set the GraphQL URI for tools that use it
 graphqluri: https://graphql.lis.ncgr.org/
