--- a/_data/about.yml
+++ b/_data/about.yml
@@ -39,4 +39,8 @@
   description: "Overview of pages and content at SoyBase"
   name: "SoyBase Sitemap"
   url: "/about/sitemap"
+- category: "SoyBase Team"
+  description: "Overview of SoyBase Staff, Contributors and Collaborators"
+  name: "Soybase Team"
+  url: "/about/soybase_team"
 
