--- a/_config.yml
+++ b/_config.yml
@@ -113,6 +113,7 @@ defaults:
 # their entries' file path in the `include:` list.
 #
 exclude:
+  - requirements.txt
   - vendor/
 #   - .sass-cache/
 #   - .jekyll-cache/
