--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,2 @@
-pathspec==0.11.2
-PyYAML==6.0.1
+lis-autocontent @ https://github.com/legumeinfo/LIS-autocontent/archive/59bb10bac97cf440139aafd9d06688608c273c20.tar.gz
 yamllint==1.32.0
