Update sgn issues with addresses of previously missing papers

--- a/_data/sgn/sgn_2005/issue.yml
+++ b/_data/sgn/sgn_2005/issue.yml
@@ -113,7 +113,7 @@
     resistance is being used in AICRP on soybean, namely G. Max cv. UPSM-534 and the wild species
     G. sojae (Ram et al., 1984) . There is an urgent need to identify newer sources of resistance
     and to understand the nature of resistance."
-  file: "#MISSING Screening_and_utilization_of_soybean_germplasm_for_breeding_for_resistance_against_Mungbean_yellow_mosaic_virus.pdf"
+  file: "Screening_and_utilization_of_soybean_germplasm_for_breeding_for_resistance_against_Mungbean_yellow_mosaic_virus.doc"
 
 - title: "Screening of Soybean Genotypes for Resistance against Stem Fly (Melanagromyza sojae Zehnt.)"
   authors: "Awasthi, M.K. ;A..N. Sharma and R.R.Deshpande"
