--- a/_data/sgn/sgn_1999/issue.yml
+++ b/_data/sgn/sgn_1999/issue.yml
@@ -38,7 +38,7 @@
     and very subjective. This makes comparisons difficult with qualitative data from different
     laboratories.<br>The objective of this work was to demonstrate the capability of characterizing
     somatic embryo development using image analysis and animation techniques."
-  file: "#MISSING"
+  file: "Animation_and_Image_Analysis_for_Evaluation_of_Soybean_Glycine_max_Somatic_Embryo_Growth.doc"
 
 - title: "Segregation for Stem Canker resistance in Southern Soybean crosses"
   authors: "J. Tyler"
@@ -68,7 +68,7 @@
     present investigation was conducted to further examine randomly amplified polymorphism DNA
     (RAPD) markers associated with salt tolerance and therefore to study the molecular mechanisms
     of adaptation of wild soybean to changing saline conditions."
-  file: "#MISSING"
+  file: "RAPD_Markers_Associated_with_Salt_Tolerance_In_Wild_Soybean_Populations.doc"
 
 - title: "Soybean Linkage Studies: y18 and y20"
   authors: "J. D. Burzlaff, and R. G. Palmer"
@@ -102,7 +102,7 @@
     is to determine SCN race type at the Experiment station, Plant Protection Institute, Chinese
     Academy of Agricultural Sciences in Beijing and to investigate the inheritance of resistance of
     the identified SCN race in Huibuzhi black bean."
-  file: "#MISSING Genetic_Study_on_Resistance_to_Soybean_Cyst_Nematode_Heterodera_glycines_Race_14_in_Huibuzhi_Black_Bean_from_Xing_County_in_Shanxi_Province.doc"
+  file: "Genetic_Study_on_Resistance_to_Soybean_Cyst_Nematode_Heterodera_glycines_Race_14_in_Huibuzhi_Black_Bean.doc"
 
 - title: "The Amino Acid Sequence Determination of a New Variant of Kunitz Soybean Trypsin Inhibitor (SBTi-A2)"
   authors: "Xin Hua, Xie Kefang, Dong Aiwu, Yan Qingyan, and Gu Qimin"
@@ -112,7 +112,7 @@
     variant of SBTi-A2 discovered in the Gansu province of China. The amino acid sequence of Ti
     protein was deduced from its DNA sequence which is obtained by PCR and determined by DNA
     sequence analysis in our laboratory."
-  file: "#MISSING The_Amino_Acid_Sequence_Determination_of_a_New_Variant_of_Kunitz_Soybean_Trypsin_Inhibitor_SBTi_A2.doc"
+  file: "The_Amino_Acid_Sequence_Determination_of_a_New_Variant_of_Kunitz_Soybean_Trypsin_Inhibitor_SBTi_A2.doc"
 
 - title: "Effect of Different Mutagenic Treatments on Morphological Traits of M2 Generation of Soybean"
   authors: "Martin Hajduch*2, Frantisek Debre3, Blanka B&ouml;hmov&aacute;1, and Anna Pretov&aacute;2"
@@ -142,7 +142,7 @@
     means evaluation would be more efficient than selecting on a single F2 plant basis. The high
     heritability estimates in our greenhouse evaluations are valuable to soybean breeders selecting
     for partial resistance to S. sclerotiorum."
-  file: "#MISSING Inheritance_of_Partial_Resistance_to_Sclerotinia_sclerotiorum_in_Soybean_Cultivars_Asgrow_A2506_and_Novartis_S19_90f.doc"
+  file: "Inheritance_of_Partial_Resistance_to_Sclerotinia_sclerotiorum_in_Soybean_Cultivars_Asgrow_A2506_and_Novartis_S19_90f.doc"
 
 - title: "Influence of wp on Pod Characteristics and Agronomic Traits of Soybean Lines"
   authors: "D. C. Gay, J. M. Hegstad, P. A. Stephens, and C. D. Nickell"
@@ -184,7 +184,7 @@
     nodes per plant and with number of seeds per pod, and has been positively associated with seed
     size (Fehr and Weber 1968). In two populations, an inverse relationship was reported between
     protein content and resistance to shattering (Johnson et al. 1955b)."
-  file: "#MISSING The_Effect_of_Selection_Method_on_the_Association_of_Yield_and_Seed_Protein_with_Agronomic_Characters_in_an_Interspecific_Cross_of_Soybean.doc"
+  file: "The_Effect_of_Selection_Method_on_the_Association_of_Yield_and_Seed_Protein_with_Agronomic_Characters_in_an_Interspecific_Cross_of_Soybean.doc"
 
 - title: "The Effects of Daylength on the Growth of Soybean and the Creation of Wide-adaptation Germplasm"
   authors: "Guiru Zhang and Weiguang Du"
@@ -199,7 +199,7 @@
     lines of soybean.<br>The goal of this study was to understand the response of cultivars to
     different daylengths and to create daylength insensitive germplasm. These will provide
     knowledge and material for high-yield breeding and photoperiodic breeding of soybean."
-  file: "#MISSING The_Effects_of_Daylength_on_the_Growth_of_Soybean_and_the_Creation_of_Wide_adaptation_Germplasm.doc"
+  file: "The_Effects_of_Daylength_on_the_Growth_of_Soybean_and_the_Creation_of_Wide_adaptation_Germplasm.doc"
 
 - title: "Genetic Analysis of Phytophthora Rot Resistance in the Soybean PI 567.496"
   authors: "A. D. Jenks, R. A. Leitz, and C. D. Nickell"
