--- a/_data/sgn/sgn_2000/issue.yml
+++ b/_data/sgn/sgn_2000/issue.yml
@@ -10,7 +10,7 @@
     constructed. The map defined 599.8 cM of the soybean genome comprising 15 linkage groups. The
     average interval between these markers was 11.9 cM. An additional 37 polymorphic markers
     remained unlinked."
-  file: "#MISSING A_Preliminary_Genetic_Linkage_Map_of_Soybean_Using_an_Intraspecific_Cross_of_Two_Cultivars_Peking_and_Lee.doc"
+  file: "A_Preliminary_Genetic_Linkage_Map_of_Soybean_Using_an_Intraspecific_Cross_of_Two_Cultivars_Peking_and_Lee.doc"
 
 - title: "Genetic Variation in Wild Soybean (Glycine soja Sieb. & Zucc.) Populations Revealed with Simple Sequence Repeat Markers"
   authors: "Yu Bin Li, Zhiang Hu (Author for Correspondence), Qin Zhang, Xin Deng, and Hong Xin Wang"
@@ -28,7 +28,7 @@
     markers were found to be linked to the salt tolerance character of wild soybean (Zhang et al.
     1999). In present paper we evaluated the applicability of SSRs as a source of genetic markers
     in salt resistance of wild soybean in two natural populations in saline conditions."
-  file: "#MISSING Genetic_Variation_in_Wild_Soybean_Glycine_soja_Sieb_&_Zucc_Populations_Revealed_with_Simple_Sequence_Repeat_Markers.doc"
+  file: "Genetic_Variation_in_Wild_Soybean_Glycine_soja_Sieb_&_Zucc_Populations_Revealed_with_Simple_Sequence_Repeat_Markers.doc"
 
 - title: "Further Study on Genotypic Variation of Salt Tolerance to Wild Soybean (Glycine soja Sieb. & Zucc.)"
   authors: "Yu Bin Li, Zhi Ang Hu (Author for Correspondence) and Hong Xin Wang"
@@ -46,7 +46,7 @@
     evaluates the salt tolerance of wild soybean in two saline populations under different
     temperature schedules and developmental stages in order to elucidate salt tolerance of Glycine
     Soja in the real and natural situation."
-  file: "#MISSING Further_Study_on_Genotypic_Variation_of_Salt_Tolerance_to_Wild_Soybean_Glycine_soja_Sieb_Zucc.doc"
+  file: "Further_Study_on_Genotypic_Variation_of_Salt_Tolerance_to_Wild_Soybean_Glycine_soja_Sieb_Zucc.doc"
 
 - title: "Genetic Analysis of a Root Fluorescence Mutant from Yunnan Province China"
   authors: "Pinar Cubukcu1, Soon-Suk Kang2, and  Reid G. Palmer2"
@@ -66,7 +66,7 @@
     cells from dehydration [2]. Here changes of free proline levels and endogenous ABA content in
     seedling leaves of different soybean cultivars were detected showing a correlation of biotypes
     having elevated levels of proline and ABA content with enhanced tolerance to PEG stress."
-  file: "#MISSING Changes_of_Proline_Levels_and_Abscisic_Acid_Content_in_Tolerant_Sensitive_Cultivars_of_Soybean_under_Osmotic_Conditions.doc"
+  file: "Changes_of_Proline_Levels_and_Abscisic_Acid_Content_in_Tolerant_Sensitive_Cultivars_of_Soybean_under_Osmotic_Conditions.doc"
 
 - title: "Cloning and Characterization of a Molecular Marker Associrance from Soybean Cultivarsated with Salt Tole"
   authors: "Zhang Qin, Yun Rui, Hu Zhiang, Zhong Min, Deng Xin"
@@ -79,7 +79,7 @@
     salt-tolerant cultivars (Zhong et al., 1997). In the present work, we describe the cloning and
     characterization of the specific marker 8-27/240bp in order to further study whether it plays
     an important role in salt tolerance of soybean."
-  file: "#MISSING"
+  file: "Cloning_and_Characterization_of_a_Molecular_Marker_Associrance_from_Soybean_Cultivarsated_with_Salt_Tolerance.doc"
 
 - title: "Gene Expression of Soybean Calli Culture Affected by Auxinoids with Various Chemical Structure"
   authors: "Elena Hlinkov' and Claudia Ruzickov'"
@@ -90,7 +90,7 @@
     a dedifferentiation are conditioned with the chemical structure of used exogenous growth
     regulators an ontogenetic stage of explant and concentration gradient between exogenous and
     endogenous growth regulators..."
-  file: "#MISSING SGN.gif"
+  file: "Gene_Expression_of_Soybean_Calli_Culture_Affected_by_Auxinoids_with_Various_Chemical_Structure.doc"
 
 - title: "Variations for Biomass, Economic Yield and Harvest Index among Soybean Cultivars of Maturity Groups III and IV in Argentina"
   authors: "M.E. Weilenmann de Tau (etau@balcarce.inta.gov.ar) and J. L&uuml;quez"
@@ -111,7 +111,7 @@
     variability for EY, BY and HI among soybean cultivars, b) identify genotypes having high BY, EY
     and HI and c) determine the associations between BY and HI with EY in order to enhance soybean
     grain yields combining superior genotypes for BY and HI."
-  file: "#MISSING Variations_for_Biomass_Economic_Yield_and_Harvest_Index_among_Soybean_Cultivars_of_Maturity_Groups_III_and_IV_in_Argentina.doc"
+  file: "Variations_for_Biomass_Economic_Yield_and_Harvest_Index_among_Soybean_Cultivars_of_Maturity_Groups_III_and_IV_in_Argentina.doc"
 
 - title: "Inheritance of Genes Controlling Photoperiod Insensitivity and Flowering Time in Soybean"
   authors: "I. M. Tasma1, L. L. Lorenzen2, D. E. Green1, and R. C. Shoemaker1,3"
@@ -147,9 +147,9 @@
     importance have been identified by about 15 groups over the last 10 years (Imsande et al.,
     1998; Soybase http://probe.nalusda.gov:8300). However, it is not feasible to fine-map and
     isolate large numbers of soybean genes by this technology."
-  file: "#MISSING Integrated_physical_mapping_of_the_soybean_genome_A_tool_for_rapid_identification_of_economically_important_genes.doc"
+  file: "Integrated_physical_mapping_of_the_soybean_genome_A_tool_for_rapid_identification_of_economically_important_genes.doc"
 
-- title: "Construction and Characterization of a  BAC Library for the Soybean Cultivar A3244"
+- title: "Construction and Characterization of a BAC Library for the Soybean Cultivar A3244"
   authors: "J.P. Tomkins, D.A. Frisch, J.R. Byrum and R.A.. Wing"
   abstract: "  The construction of a physical framework for the soybean genome requires the use of large insert
     genomic libraries. The bacterial artificial chromosome (BAC) cloning system appears to offer
@@ -163,7 +163,7 @@
     library providing at least 10 genome equivalents will be required. Our objective was to develop
     a deep coverage soybean BAC library for the purpose of creating a comprehensive physical
     framework of the soybean genome."
-  file: "#MISSING"
+  file: "Construction_and_Characterization_of_a_BAC_Library_for_the_Soybean_Cultivar_A3244.doc"
 
 - title: "Agronomic traits correlative analysis between interspecific and intraspecific soybean crosses"
   authors: "Qi Yang & Jinling Wang"
@@ -180,7 +180,7 @@
     correlation of protein content with developing stage were in the opposite direction to that of
     oil content. It is suggested that it was difficulty to select plants both higher in protein and
     in oil content derived from interspecific crosses."
-  file: "#MISSING Agronomic_traits_correlative_analysis_between_interspecific_and_intraspecific_soybean_crosses.doc"
+  file: "Agronomic_traits_correlative_analysis_between_interspecific_and_intraspecific_soybean_crosses.doc"
 
 - title: "Field Resistance to Sudden Death Syndrome is effective at low Inoculum Concentration in Greenhouse Assays"
   authors: "V.N. Njiti, J.E. Johnson, G.A. Torto and D.A. Lightfoot."
@@ -200,7 +200,7 @@
     rate separated genotypes (P <0.05) and their greenhouse DS significantly correlated with field
     DS (r =0.9) and disease index (r =0.86). Therefore the method is an effective tool for
     inheritance studies and cultivar trials."
-  file: "#MISSING Field_Resistance_to_Sudden_Death_Syndrome_is_effective_at_low_Inoculum_Concentration_in_Greenhouse_Assays.doc"
+  file: "Field_Resistance_to_Sudden_Death_Syndrome_is_effective_at_low_Inoculum_Concentration_in_Greenhouse_Assays.doc"
 
 - title: "Inheritance of a five leaflet character arising from wild soybean (Glycine soja Sieb. et Zucc.) in soybeans (G. max (L.) Merr.)"
   authors: "Wang Ke-Jing wangkejing@ihw.com.cn, Li Fu-Shan, Zhou Tao and Xu Zhan-You"
@@ -216,5 +216,5 @@
     effect-duplicated. The results also suggested that the Five Leaf Bean a donor of five leaflet
     genes acquired by random selection to a cross progenies ((cultivar1 x wild soybean) x
     cultivar2) had heterogeneous genotypes at the three loci among individuals."
-  file: "#MISSING Inheritance_of_a_five_leaflet_character_arising_from_wild_soybean_Glycine_soja_Sieb_et_Zucc_in_soybeans_G_max_L_Merr.doc"
+  file: "Inheritance_of_a_five_leaflet_character_arising_from_wild_soybean_Glycine_soja_Sieb_et_Zucc_in_soybeans_G_max_L_Merr.doc"
 
