Change links in sgn issues from .doc to .pdf, corresponding with that change in the Data Store annex

--- a/_data/sgn/sgn_1999/issue.yml
+++ b/_data/sgn/sgn_1999/issue.yml
@@ -9,7 +9,7 @@
     inheritance of resistance to P. sojae in PI 567574A. Results indicate that there are two
     alleles at independent loci that control resistance in this PI. Allelism studies indicated that
     the two alleles are Rps1c and Rps3a."
-  file: "Inheritance_of_Resistance_to_Phytophthora_sojae_in_the_Soybean_PI_567574A.doc"
+  file: "Inheritance_of_Resistance_to_Phytophthora_sojae_in_the_Soybean_PI_567574A.pdf"
 
 - title: "Animation and Image Analysis for Evaluation of Soybean (Glycine max L. Merrill.) Somatic Embryo Growth"
   authors: "Marco T. Buenrostro-Nava1,3, Holly M. Frantz1, Peter P. Ling2 and John J. Finer1,4"
@@ -38,7 +38,7 @@
     and very subjective. This makes comparisons difficult with qualitative data from different
     laboratories.<br>The objective of this work was to demonstrate the capability of characterizing
     somatic embryo development using image analysis and animation techniques."
-  file: "Animation_and_Image_Analysis_for_Evaluation_of_Soybean_Glycine_max_Somatic_Embryo_Growth.doc"
+  file: "Animation_and_Image_Analysis_for_Evaluation_of_Soybean_Glycine_max_Somatic_Embryo_Growth.pdf"
 
 - title: "Segregation for Stem Canker resistance in Southern Soybean crosses"
   authors: "J. Tyler"
@@ -52,7 +52,7 @@
     This indicates that few loci are represented in the current elite breeding gene pool. An
     implication from the study is that breeders can delay testing for stem canker resistance until
     very late phases of development if both parents are resistant."
-  file: "Segregation_for_Stem_Canker_resistance_in_Southern_Soybean_crosses.doc"
+  file: "Segregation_for_Stem_Canker_resistance_in_Southern_Soybean_crosses.pdf"
 
 - title: "RAPD Markers Associated with Salt Tolerance In Wild Soybean Populations"
   authors: "Q. Zhang, H. Wang, and  Z. Hu"
@@ -68,7 +68,7 @@
     present investigation was conducted to further examine randomly amplified polymorphism DNA
     (RAPD) markers associated with salt tolerance and therefore to study the molecular mechanisms
     of adaptation of wild soybean to changing saline conditions."
-  file: "RAPD_Markers_Associated_with_Salt_Tolerance_In_Wild_Soybean_Populations.doc"
+  file: "RAPD_Markers_Associated_with_Salt_Tolerance_In_Wild_Soybean_Populations.pdf"
 
 - title: "Soybean Linkage Studies: y18 and y20"
   authors: "J. D. Burzlaff, and R. G. Palmer"
@@ -79,7 +79,7 @@
     y20 [Soybase] and the yellow lethal mutant was allelic to y18 [Soybase]. These data will be
     reported elsewhere. Our objective was to determine linkage relationships of these two mutants
     with morphological and isoenzyme mutants in soybean."
-  file: "Soybean_Linkage_Studies_y18_and_y20.doc"
+  file: "Soybean_Linkage_Studies_y18_and_y20.pdf"
 
 - title: "Soybean Linkage Studies: Chlorophyll-deficient Mutant"
   authors: "R. G. Palmer"
@@ -91,7 +91,7 @@
     [Soybase] (T288 [GRIN]) and was placed on classical genetic linkage group 8 [Soybase] (Palmer
     et al. 1990).<br>Our objective was to determine the inheritance and linkage relationships of
     chlorophyll-deficient Williams (77-2-80) obtained from A. Williams."
-  file: "Soybean_Linkage_Studies_Chlorophyll_deficient_Mutant.doc"
+  file: "Soybean_Linkage_Studies_Chlorophyll_deficient_Mutant.pdf"
 
 - title: "Genetic Study on Resistance to Soybean Cyst Nematode (Heterodera glycines) Race 14 in Huibuzhi Black Bean from Xing County in Shanxi Province"
   authors: "Yantong Wang1, Peng Deliang2, and Chen Shouyi3"
@@ -102,7 +102,7 @@
     is to determine SCN race type at the Experiment station, Plant Protection Institute, Chinese
     Academy of Agricultural Sciences in Beijing and to investigate the inheritance of resistance of
     the identified SCN race in Huibuzhi black bean."
-  file: "Genetic_Study_on_Resistance_to_Soybean_Cyst_Nematode_Heterodera_glycines_Race_14_in_Huibuzhi_Black_Bean.doc"
+  file: "Genetic_Study_on_Resistance_to_Soybean_Cyst_Nematode_Heterodera_glycines_Race_14_in_Huibuzhi_Black_Bean.pdf"
 
 - title: "The Amino Acid Sequence Determination of a New Variant of Kunitz Soybean Trypsin Inhibitor (SBTi-A2)"
   authors: "Xin Hua, Xie Kefang, Dong Aiwu, Yan Qingyan, and Gu Qimin"
@@ -112,7 +112,7 @@
     variant of SBTi-A2 discovered in the Gansu province of China. The amino acid sequence of Ti
     protein was deduced from its DNA sequence which is obtained by PCR and determined by DNA
     sequence analysis in our laboratory."
-  file: "The_Amino_Acid_Sequence_Determination_of_a_New_Variant_of_Kunitz_Soybean_Trypsin_Inhibitor_SBTi_A2.doc"
+  file: "The_Amino_Acid_Sequence_Determination_of_a_New_Variant_of_Kunitz_Soybean_Trypsin_Inhibitor_SBTi_A2.pdf"
 
 - title: "Effect of Different Mutagenic Treatments on Morphological Traits of M2 Generation of Soybean"
   authors: "Martin Hajduch*2, Frantisek Debre3, Blanka B&ouml;hmov&aacute;1, and Anna Pretov&aacute;2"
@@ -121,7 +121,7 @@
     undertaken to obtain information on effect of g-irradiation and sodium azide as well as their
     combination on morphological traits of the M2 generation of two soybean cultivars Tolena and
     Toping."
-  file: "Effect_of_Different_Mutagenic_Treatments_on_Morphological_Traits_of_M2_Generation_of.doc"
+  file: "Effect_of_Different_Mutagenic_Treatments_on_Morphological_Traits_of_M2_Generation_of.pdf"
 
 - title: "Inheritance of Partial Resistance to Sclerotinia sclerotiorum in Soybean Cultivars Asgrow A2506 and Novartis S19-90"
   authors: "D. D. Hoffman1, A. D. Nickell2, C. D. Nickell1, B.W. Diers1, and G. L. Hartman1"
@@ -142,7 +142,7 @@
     means evaluation would be more efficient than selecting on a single F2 plant basis. The high
     heritability estimates in our greenhouse evaluations are valuable to soybean breeders selecting
     for partial resistance to S. sclerotiorum."
-  file: "Inheritance_of_Partial_Resistance_to_Sclerotinia_sclerotiorum_in_Soybean_Cultivars_Asgrow_A2506_and_Novartis_S19_90f.doc"
+  file: "Inheritance_of_Partial_Resistance_to_Sclerotinia_sclerotiorum_in_Soybean_Cultivars_Asgrow_A2506_and_Novartis_S19_90f.pdf"
 
 - title: "Influence of wp on Pod Characteristics and Agronomic Traits of Soybean Lines"
   authors: "D. C. Gay, J. M. Hegstad, P. A. Stephens, and C. D. Nickell"
@@ -169,7 +169,7 @@
     1945). <br>In the literature, there are no reports relating flower color with seeds per pod or
     loculi per pod. The objective of this study was to describe the influence of wp upon pod
     characteristics and agronomic traits when crossed into a different genetic background."
-  file: "Influence_of_wp_on_Pod_Characteristics_and_Agronomic_Traits_of_Soybean_Lines.doc"
+  file: "Influence_of_wp_on_Pod_Characteristics_and_Agronomic_Traits_of_Soybean_Lines.pdf"
 
 - title: "The Effect of Selection Method on the Association of Yield and Seed Protein with Agronomic Characters in an Interspecific Cross of Soybean"
   authors: "Li Xinhai1, Wang Jinling1,Yang Qingkai1, Jiao Shaojie2, and Wang Liming2"
@@ -184,7 +184,7 @@
     nodes per plant and with number of seeds per pod, and has been positively associated with seed
     size (Fehr and Weber 1968). In two populations, an inverse relationship was reported between
     protein content and resistance to shattering (Johnson et al. 1955b)."
-  file: "The_Effect_of_Selection_Method_on_the_Association_of_Yield_and_Seed_Protein_with_Agronomic_Characters_in_a_Soybean_Interspecific_Cross.doc"
+  file: "The_Effect_of_Selection_Method_on_the_Association_of_Yield_and_Seed_Protein_with_Agronomic_Characters_in_a_Soybean_Interspecific_Cross.pdf"
 
 - title: "The Effects of Daylength on the Growth of Soybean and the Creation of Wide-adaptation Germplasm"
   authors: "Guiru Zhang and Weiguang Du"
@@ -199,7 +199,7 @@
     lines of soybean.<br>The goal of this study was to understand the response of cultivars to
     different daylengths and to create daylength insensitive germplasm. These will provide
     knowledge and material for high-yield breeding and photoperiodic breeding of soybean."
-  file: "The_Effects_of_Daylength_on_the_Growth_of_Soybean_and_the_Creation_of_Wide_adaptation_Germplasm.doc"
+  file: "The_Effects_of_Daylength_on_the_Growth_of_Soybean_and_the_Creation_of_Wide_adaptation_Germplasm.pdf"
 
 - title: "Genetic Analysis of Phytophthora Rot Resistance in the Soybean PI 567.496"
   authors: "A. D. Jenks, R. A. Leitz, and C. D. Nickell"
@@ -209,7 +209,7 @@
     soybeans is controlled by thirteen dominant genes. There are fifty-three known races of the
     pathogen (Ryley et al., 1998). The pathogen may attack plants in all stages of growth with
     disease development favored by poorly drained soils and cool wet weather (Moots, et al., 1988)."
-  file: "Genetic_Analysis_of_Phytophthora_Rot_Resistance_in_the_Soybean_PI_567.496.doc"
+  file: "Genetic_Analysis_of_Phytophthora_Rot_Resistance_in_the_Soybean_PI_567.496.pdf"
 
 - title: "Genetic Analysis of Phytophthora Rot Resistance in the Soybean PI 567.504"
   authors: "D.J. Weber, R.A. Leitz, and C.D. Nickell"
@@ -221,5 +221,5 @@
     Hegstad et al. (1998) suggested on the basis of RFLP analysis that PI 567.504 carries the Rps3a
     gene for resistance to P. sojae. The objective of this study was to determine the genetic
     control of resistance to P. sojae race 25 in PI 567.504."
-  file: "Genetic_Analysis_of_Phytophthora_Rot_Resistance_in_the_Soybean_PI_567.504.doc"
+  file: "Genetic_Analysis_of_Phytophthora_Rot_Resistance_in_the_Soybean_PI_567.504.pdf"
 
