--- a/_data/sgn/sgn_2001/issue.yml
+++ b/_data/sgn/sgn_2001/issue.yml
@@ -37,5 +37,5 @@
     existing cultivars are far from the calculated selection limit. Selection limits are not an
     imminent threat to North American soybean breeders, but this does not imply that efforts to
     broaden the germplasm base are wasted."
-  file: "Selection_Limits_How_Close_Are_We.doc"
+  file: "Selection_Limits_How_Close_Are_We.pdf"
 
