--- a/_data/sgn/sgn_2006/issue.yml
+++ b/_data/sgn/sgn_2006/issue.yml
@@ -93,7 +93,7 @@
     or early September). <br>If you desire more information, or have questions, or simply desire to
     purse an issue relevant to the SoyGEC, please feel free to contact any current SoyGEC member.
     <br>"
-  file: "SoyGEC.doc"
+  file: "SoyGEC.pdf"
 
 - title: "SoyMap: an integrated map of soybean for resolution and dissection of multiple genome duplication events"
   authors: "Scott A. Jackson1, Rod A. Wing2, Gary Stacey3, Gregory May4 and Randy C.  Shoemaker5"
