Fix some broken links (internal and external) for NAM project

--- a/_data/nam_lines/PI_398881/details.yml
+++ b/_data/nam_lines/PI_398881/details.yml
@@ -1,7 +1,7 @@
 ---
 Parent: PI 398881
 Population: NAM40
-Pedigree: <a href='http://www.ars-grin.gov/cgi-bin/npgs/swish/accboth?query=+PI+398881&submit=Submit+Text+Query&si=0'>View record at ars-grin.gov</a>
+Pedigree: <a href='https://npgsweb.ars-grin.gov/gringlobal/search'>View record at ars-grin.gov</a>
 Maternal_x_Paternal_Cross: IA3023 x PI 398881
 F1_Seed_Source: Jim Specht - Univ. of Nebraska
 Descriptors:
