--- a/_data/nam_lines/PI_574486/details.yml
+++ b/_data/nam_lines/PI_574486/details.yml
@@ -1,7 +1,7 @@
 ---
 Parent: PI 574486
 Population: NAM64
-Pedigree: <a href='http://www.ars-grin.gov/cgi-bin/npgs/swish/accboth?query=PI+574486&submit=Search%21&sort=swishrank&si=0&.cgifields=si&.cgifields=reverse'>View record at ars-grin.gov</a>
+Pedigree: <a href='https://npgsweb.ars-grin.gov/gringlobal/search'>View record at ars-grin.gov</a>
 Maternal_x_Paternal_Cross: IA3023 x PI 574486
 F1_Seed_Source: Jim Specht - Univ. of Nebraska
 Descriptors:
