--- a/_data/nam_lines/PI_437169B/details.yml
+++ b/_data/nam_lines/PI_437169B/details.yml
@@ -1,7 +1,7 @@
 ---
 Parent: PI 437169B
 Population: NAM42
-Pedigree: <a href='http://www.ars-grin.gov/cgi-bin/npgs/swish/accboth?query=I+437169+B&submit=Search%21&sort=swishrank&si=0&.cgifields=si&.cgifields=reverse'>View record at ars-grin.gov</a>
+Pedigree: <a href='https://npgsweb.ars-grin.gov/gringlobal/search'>View record at ars-grin.gov</a>
 Maternal_x_Paternal_Cross: IA3023 x PI 437169B
 F1_Seed_Source: Jim Specht - Univ. of Nebraska
 Descriptors:
