make changes to alumni

--- a/_data/about.yml
+++ b/_data/about.yml
@@ -39,8 +39,12 @@
   description: "Overview of pages and content at SoyBase"
   name: "SoyBase Sitemap"
   url: "/about/sitemap"
-- category: "SoyBase Team"
-  description: "Overview of SoyBase Staff, Contributors and Collaborators"
+- category: "About SoyBase"
+  description: "SoyBase Staff and Contributors"
   name: "Soybase Team"
   url: "/about/soybase_team"
+- category: "About SoyBase"
+  description: "About the SoyBase database and soybeans"
+  name: "About SoyBase"
+  url: "/about/soybase_about"
 
