Tweak description text for FAIR data link

--- a/_data/about.yml
+++ b/_data/about.yml
@@ -33,7 +33,7 @@
   url: "/about/submitting_data"
 - category: "Data"
   description: "FAIR data at SoyBase"
-  name: "FAIR data practices"
+  name: "Data best practices"
   url: "/about/fairpractices"
 - category: "About SoyBase"
   description: "About the SoyBase database and soybeans"
