--- a/_data/tools.yml
+++ b/_data/tools.yml
@@ -39,14 +39,18 @@
   description: "Run BLASTs against LIS genomes, CDSes, and proteins"
   name: "SoyBase SequenceServer BLAST"
   url: "/tools/sequenceserver/"
+- category: "Sequence search"
+  description: "Functionally annotate protein or nucleotide sequences and place them into gene trees"
+  name: "Annotate Your Sequences"
+  url: "https://funnotate.legumeinfo.org/"
+- category: "Sequence search"
+  description: "Find corresponding gene IDs between accessions"
+  name: "Gene-name lookup"
+  url: "/tools/correspondence/"
 - category: "Visualize / Browse"
   description: "Functional keyword search for gene families"
   name: "Gene Family Search"
   url: "https://funnotate.legumeinfo.org/?search"
-- category: "Sequence search"
-  description: "Functional annotation of protein or nucleotide sequences, and placement into gene trees"
-  name: "Funnotate: Annotate Your Sequences"
-  url: "https://funnotate.legumeinfo.org/"
 - category: "Visualize / Browse"
   description: "A multiple chromosome visualisation tool for visualizing resequencing or SNP array data"
   name: "GCViT: SNP Comparison Tool"
