Content changes to the gene-name translate tool (and rename from correspondence)

--- a/_data/tools.yml
+++ b/_data/tools.yml
@@ -43,10 +43,10 @@
   description: "Functionally annotate protein or nucleotide sequences and place them into gene trees"
   name: "Annotate Your Sequences"
   url: "https://funnotate.legumeinfo.org/"
-- category: "Sequence search"
+- category: "Search"
   description: "Find corresponding gene IDs between accessions"
-  name: "Gene-name lookup"
-  url: "/tools/correspondence/"
+  name: "Gene-name translator"
+  url: "/tools/translate/"
 - category: "Visualize / Browse"
   description: "Functional keyword search for gene families"
   name: "Gene Family Search"
