--- a/_data/community.yml
+++ b/_data/community.yml
@@ -28,6 +28,8 @@
       url: "https://www.ncsrp.com/"
   - name: "Communications"
     resources:
+    - description: "About the SoyBase Genetic Maps"
+      url: "/about/about_maps/"
     - description: "Soybean Genetics Newsletter"
       url: "/community/sgn"
     - description: "2009 Soybean Genomic Sequence Assembly Announcement"
