--- a/_data/tools.yml
+++ b/_data/tools.yml
@@ -11,6 +11,10 @@
   description: "Overviews of data characteristics at SoyBase and LIS: genome assembly sizes, gene counts, BUSCO coverage, etc."
   name: "Data Overviews for soy genomic data"
   url: "https://dscensor.legumeinfo.org/multiqc-demo/genome_main:Glycine"
+- category: "Download / Query"
+  description: "USDA Germplasm Collection SoySNP50K Haplotypes: downloads, viewing on browsers, etc."
+  name: "USDA Germplasm Collection SOySNP50K Haplotypes"
+  url: "/tools/snp50k"
 - category: "Visualize / Browse"
   description: "Genome browsers for soybean and related species. (Also accessible from the GENOMICS tab)"
   name: "Genome browsers"
