--- a/_data/tools.yml
+++ b/_data/tools.yml
@@ -12,8 +12,8 @@
   name: "Data Overviews for soy genomic data"
   url: "https://dscensor.legumeinfo.org/multiqc-demo/genome_main:Glycine"
 - category: "Download / Query"
-  description: "USDA Germplasm Collection SoySNP50K Haplotypes: downloads, viewing on browsers, etc."
-  name: "USDA Germplasm Collection SOySNP50K Haplotypes"
+  description: "USDA Germplasm collection SoySNP50K Haplotypes: downloads, viewing on browsers, etc."
+  name: "USDA Germplasm SoySNP50K"
   url: "/tools/snp50k"
 - category: "Visualize / Browse"
   description: "Genome browsers for soybean and related species. (Also accessible from the GENOMICS tab)"
