Added trait search.

--- a/_data/tools.yml
+++ b/_data/tools.yml
@@ -55,6 +55,10 @@
   description: "Search for genes"
   name: "Gene Search Tool"
   url: "/tools/search/gene.html"
+- category: "Search"
+  description: "Search for trait associations"
+  name: "Trait Search Tool"
+  url: "/tools/search/trait.html"
 - category: "Visualize / Browse"
   description: "SoyBase Soybean growth, development and structural ontology."
   name: "Ontology"
