--- a/_data/community.yml
+++ b/_data/community.yml
@@ -3,7 +3,7 @@
   - name: "Community resources at SoyBase"
     resources:
     - description: "Soybean Breeders Workshop"
-      url: "https://www.soybase.org/meeting_presentations/soybean_breeders_workshop/"
+      url: "/community/sbw"
     - description: "Biennial Conference - Molecular and Cellular Biology of the Soybean"
       url: "/community/soy_biennial"
     - description: "Soybean Genomics Executive Committee"
@@ -13,7 +13,7 @@
     - description: "Soybean Genomics Research: A Strategic Plan for 2017-2021"
       url: "https://soybase.org/resources/SoyGEC/2017/SoyGenStratPlan_2017-2021.pdf"
     - description: "Research and Goals to Control Losses from Stink Bugs and Related Pests"
-      url: "https://soybase.org/community/StinkBugStratPlan/StinkBugStratPlan.php"
+      url: "/community/sbsp"
     - description: "Soybean Photographs"
       url: "https://soybase.org/resources/SoyWebPics/index.php"
     - description: "Soybean Germplasm Committee"
