--- a/_data/project_list.yml
+++ b/_data/project_list.yml
@@ -107,3 +107,9 @@
   description: "Genomes and gene models were generated from multiple perennial soybean species across the Glycine genus to study insights into the polyploid and perennial genome evolution and genetic potential for soybean improvement."
   SoyBaseID: "SoyBase.C2022.01"
   DataStoreID: "Zhuang_Wang_2022"
+-
+  title: "Soybean fast neutron mutants"
+  short_title: "Soybean Fast Neutron Mutants"
+  description: "Soybean fast neutron mutant lines developed for use in soybean functional genomics. Within the catalog are mutants with observed phenotypic variation in seed composition, maturity, morphology, pigmentation, roots and nodulation."
+  SoyBaseID: "SoyBase.fn_mutants"
+  DataStoreID: "FN_mutants_2011"
