Tidy up the FN_mutants project page and data examples

--- a/_data/projects/FN_mutants_2011/project_details.yml
+++ b/_data/projects/FN_mutants_2011/project_details.yml
@@ -29,8 +29,10 @@
       doi: 10.1534/genetics.114.170340
   data_links:
     - category:
-        - name: See examples of the <a href="/projects/FN_mutant_details">contents of each file here</a>.
+        - name: Also see examples of the <a href="/projects/FN_mutant_details">contents of each file here</a>.
           instances:
+            - description: Fasta file of FN deletions from the Wm82.a1.v1 / Wm82.gnm1.ann1 assembly
+              url: https://soybase.org/data/annex/Glycine/max/projects/FN_mutants/fn_indels.nt.20140304.fasta.gz
             - description: insertion_event.tsv -- Insertion IDs, names, vectors
               url: https://soybase.org/data/annex/Glycine/max/projects/FN_mutants/insertion_event.tsv.gz
             - description: insertion_mutant.tsv -- Insertion line and responsible lab
