--- a/_data/tools.yml
+++ b/_data/tools.yml
@@ -32,13 +32,13 @@
   name: "CMap-js: Genetic Map Viewer"
   url: "/maps"
 - category: "Visualize / Browse"
-  description: "View GIS location information for legume accessions."
+  description: "View GIS location information for Glycine accessions."
   name: "LIS Germplasm GIS Viewer"
-  url: "https://germplasm-map.legumeinfo.org/"
+  url: "https://germplasm-map.legumeinfo.org/#?zoom=3&maxRecs=2000&taxonQuery=Glycine%20max&traitOverlay=NEMATCYST&traitScale=global&country=&geocodedOnly&traitExcludeUnchar=false&limitToMapExtent=false&lat=2.62&lng=34.09&mapHeight=482&baseMap=ESRI%20-%20NatGeo%20(default,%20reference%20map)&ne_lat=40.97048563461504&ne_lng=196.6911292076111&sw_lat=-36.88959221039716&sw_lng=-128.50418329238894&accessionIdsInclusive=false"
 - category: "Visualize / Browse"
   description: "Conekt is a tool for comparative gene expression analysis."
   name: "Conekt Comparative Expression"
-  url: "https://conekt.legumeinfo.org/species"
+  url: "https://conekt.legumeinfo.org/species/view/2"
 - category: "Sequence search"
   description: "Run BLASTs against LIS genomes, CDSes, and proteins"
   name: "SoyBase SequenceServer BLAST"
